<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小蜜蜂音乐</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mine">我的</string>
    <string name="find">发现</string>
    <string name="recommend">推荐</string>
    <string name="settings">设置</string>
    <string name="userinfo">Users</string>
    <string name="scanMusic">扫描音乐</string>
    <string name="exit">退出</string>
    <string name="sleep_set">睡眠设置</string>
    <string name="turn_on">开启了摇一摇切歌</string>
    <string name="turn_off">关闭了摇一摇切歌</string>
    <string name="image_play">播放</string>
    <string name="image_last">上一曲</string>
    <string name="image_next">下一曲</string>
    <string name="song">歌曲：未知</string>
    <string name="songer">演唱：未知</string>
    <string name="special">专辑：未知</string>
    <string name="title_activity_music_play">MusicPlayActivity</string>
    <string name="title_activity_main1">Main1Activity</string>
    <string name="hint_search">输入歌手/歌名/专辑</string>
    <string name="play_time">0:0</string>
    <string name="local_music">本地音乐</string>
    <string name="latest_re">刷新最近</string>
    <string name="latest_music">最近播放的歌曲</string>
    <string name="tv_logo">小蜜蜂音乐</string>
    <string name="tv_song">歌曲</string>
    <string name="tv_songer">歌手</string>
    <string name="tv_special">专辑</string>
    <string name="setsleep_hint">计时结束后，将暂停并退出播放器</string>
    <string name="setsleep_off">不开启</string>
    <string name="setsleep_ten">10分钟后</string>
    <string name="setsleep_twenty">20分钟后</string>
    <string name="setsleep_thirty">30分钟后</string>
    <string name="setsleep_sixty">60分钟后</string>
    <string name="setsleep_ninety">90分钟后</string>
    <string name="setsleep_custom">自定义</string>
    <string name="btn_search">搜索</string>
    <string name="btn_clear">清除</string>
    <string name="search_hit">歌手：</string>
    <string name="special_list">专辑歌曲列表</string>

</resources>