<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guide_background" >

    <RelativeLayout
        android:id="@+id/rela_bauck"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin200" >

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="21dp"
            android:layout_marginLeft="17dp"
            android:text="@string/tv_logo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin80"
        android:layout_below="@+id/rela_bauck"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_play_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin5"
            android:layout_weight="0.36"
            android:background="@color/bluecolor"
            android:gravity="center"
            android:text="@string/local_music"
            android:textColor="@color/whitecolor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_latest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin5"
            android:layout_weight="0.36"
            android:background="@color/bluecolor"
            android:gravity="center"
            android:text="@string/latest_re"
            android:textColor="@color/whitecolor"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/lin_latest1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin20"
        android:layout_below="@+id/lin_list"
        android:orientation="vertical">
        
    <TextView
            android:id="@+id/tv_latest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_music" />
    </LinearLayout>
    <ListView
        android:id="@+id/latest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_latest1"
        android:layout_margin="@dimen/margin2"
        android:listSelector="@color/yellowcolor" >
    </ListView>

</RelativeLayout>